--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 
+:root{
+   --theme-color-1: rgb(74, 170, 165);
+   --content-bg:#FFFFFF;
+   --filler-pattern: url("../images/subtle_white_mini_waves.png");
+}
+
 *{
     font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
     padding: 0;
@@ -11,46 +17,182 @@ h1, h2, h3, h4, h5, h6{
     font-family: Georgia, Times, 'Times New Roman', serif;
 }
 
-body{
-    text-align: center;
+html, body{
+    width: 100%;
+    height: 100%;
 }
 
-#content-wrapper{
-    width: 960px;
-    display: inline-block;
-    /* margin: auto 0; */
+.container{
+    min-height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 960px 1fr;
+    grid-template-rows: auto 1fr auto;
 }
 
-header{
-    /* background-color: rgba(1,3,3, .25); */
+header, section, footer{
+        grid-column: 2 / 3;
+}
+#filler-top-left{
+    grid-column-start: 1;
+    grid-column-end: 1;
     border-bottom:rgba(3,3,3, .25) solid 2px;
     
-
-
+} 
+#filler-top-right{
+    grid-column-start: 3;
+    grid-column-end: 4;
+    border-bottom:rgba(3,3,3, .25) solid 2px;
+}
+#filler-bottom-left{
+    grid-column: 1 / 2;
+    grid-row: 3 / 4;
+}
+#filler-bottom-right{
+    grid-column: 3 / 4;
+    grid-row: 3 / 4;
 }
 
-#name{
-    background-color: rgba(0,0,255,.60);
-    margin: 0 0 0 -534px;
-    font-family: Georgia, Times, 'Times New Roman', serif;
-    font-size: 2em;
-    border: 0;
-    color: whitesmoke;
-    
-    
-    /* float: left; */
-    /* display: inline-block; */
+#filler-left-col{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+}
+#filler-right-col{
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
 
+}
+.filler-pattern{
+    background-image: var(--filler-pattern);
+}
+header{
+    grid-column: 2 / 3;
+    grid-row: 1 / 2;
+    border-bottom:rgba(3,3,3, .25) solid 2px;
+}
+section{
+    grid-row-start: 2;
+}
+#content{
+    background: var(--content-bg);
+}
+#form-container{
+    grid-column: 2 / 3;
+    grid-row-start: 2;   
+}
+footer{
+    grid-row-start: 3;
+    padding: .25rem;
+    margin-bottom: .1rem;
+    text-align: center;
+    color: #FFFFFF;
+    background-color: #666666;
+    border-top: 8px solid var(--theme-color-1);
+}
+
+nav{
+    float: right;
+    /* display: inline-block; */
+    padding-top: .75rem;    
+}
+
+#my-name{
+    display: inline-block;
+    padding: .25rem .5rem;
+    background-color: var(--theme-color-1);
+    color: #FFFFFF;
+    min-height: 100%; 
+    font-family: Georgia, Times, 'Times New Roman', serif;
+    font-size: 2rem;
+    border: 0;
 }
 
 a{
     text-decoration: none;
     color: gray;
 }
-.nav-links{
-    float: right;
-    /* display: inline-block; */
-    margin: 1em 1em 0 0;
-    
+
+
+#kitten-pic{
+    float: left;
+    width: 200px;
+    height: auto;
+    margin: .5rem;
 } 
 
+p{
+    margin: .5rem;
+}
+
+#contact-header{
+    color: var(--theme-color-1);
+}
+#form-container{
+    text-align: left;
+    padding: 2rem 1rem 5rem 1rem;
+    /* margin-left: 10%;
+    margin-right: 10%;
+    min-height: 100vh; */
+    background: var(--content-bg);
+    width: 960px;
+    display: inline-block;
+}
+
+.form-group{ 
+    margin-top: .5rem;
+}
+
+input, textarea{
+    /*border-radius: .3rem;
+    */border-radius:5px;
+    padding: .15rem;
+}
+
+input:invalid{
+    border:1px dashed red;
+}
+textarea{
+    width:75%;
+    height: 10em;
+}
+
+#submit{
+    padding: .33em .66em .33em .66em;
+    background-color: var(--theme-color-1);
+    font-size: 1em;
+    color: #fff;
+}
+#submit:hover{
+    /* background-color: rgba(74, 170, 165,.85); */
+    opacity: .85;
+}
+#portfolio-container{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    align-content: center;
+}
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  
+  .column {
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+    flex: 1;
+  }
+.portfolio-images{
+    
+    max-width: 300px;
+    height: auto;
+    flex-wrap: wrap;
+}
+/* .overlay{
+    margin-top: -50px;
+    color: white;
+    background-color: var(--theme-color-1);
+} */
