--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,8 @@
 
 :root{
    --theme-color-1: rgb(74, 170, 165);
-   --content-bg:#FFFFFF;
+   --content-background: rgba(3,3, 3, .2);
+   --footer-background: #666666;
    --filler-pattern: url("../images/subtle_white_mini_waves.png");
 }
 
@@ -26,39 +27,50 @@ html, body{
     min-height: 100%;
     display: grid;
     grid-template-columns: 1fr 960px 1fr;
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: 1rem auto 1fr auto .5rem;
 }
 
+.top-filler{
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+}
+.bottom-filler{
+    grid-row: 5 / 6;
+    grid-column: 1 /4;
+
+}
 header, section, footer{
         grid-column: 2 / 3;
 }
+header{
+    grid-row: 2 / 3;
+}
 #filler-top-left{
+    grid-row: 2 / 3;
     grid-column-start: 1;
     grid-column-end: 1;
-    border-bottom:rgba(3,3,3, .25) solid 2px;
-    
 } 
 #filler-top-right{
+    grid-row: 2 / 3;
     grid-column-start: 3;
     grid-column-end: 4;
-    border-bottom:rgba(3,3,3, .25) solid 2px;
 }
 #filler-bottom-left{
     grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    grid-row: 4 / 5;
 }
 #filler-bottom-right{
     grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    grid-row: 4 / 5;
 }
 
 #filler-left-col{
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
 }
 #filler-right-col{
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
+    grid-row: 3 / 4;
 
 }
 .filler-pattern{
@@ -66,33 +78,33 @@ header, section, footer{
 }
 header{
     grid-column: 2 / 3;
-    grid-row: 1 / 2;
-    border-bottom:rgba(3,3,3, .25) solid 2px;
+    grid-row: 2 / 3;
+    border-bottom: var(--footer-background) solid 2px;
 }
 section{
-    grid-row-start: 2;
+    grid-row-start: 3;
 }
 #content{
-    background: var(--content-bg);
+    background: var(--content-background);
 }
 #form-container{
     grid-column: 2 / 3;
-    grid-row-start: 2;   
+    grid-row-start: 3;   
 }
 footer{
-    grid-row-start: 3;
+    grid-row-start: 4;
     padding: .25rem;
     margin-bottom: .1rem;
     text-align: center;
     color: #FFFFFF;
-    background-color: #666666;
+    background-color: var(--footer-background);
     border-top: 8px solid var(--theme-color-1);
 }
 
 nav{
     float: right;
-    /* display: inline-block; */
-    padding-top: .75rem;    
+    padding-top: .75rem;
+    margin-right: .75rem;    
 }
 
 #my-name{
@@ -108,13 +120,14 @@ nav{
 
 a{
     text-decoration: none;
-    color: gray;
+}
+.nav-links{
+    color: var(--footer-background);
 }
 
-
-#kitten-pic{
+#pup-pic{
     float: left;
-    width: 200px;
+    width: 300px;
     height: auto;
     margin: .5rem;
 } 
@@ -129,10 +142,7 @@ p{
 #form-container{
     text-align: left;
     padding: 2rem 1rem 5rem 1rem;
-    /* margin-left: 10%;
-    margin-right: 10%;
-    min-height: 100vh; */
-    background: var(--content-bg);
+    background: var(--content-background);
     width: 960px;
     display: inline-block;
 }
@@ -142,8 +152,7 @@ p{
 }
 
 input, textarea{
-    /*border-radius: .3rem;
-    */border-radius:5px;
+    border-radius:5px;
     padding: .15rem;
 }
 
@@ -154,7 +163,6 @@ textarea{
     width:75%;
     height: 10em;
 }
-
 #submit{
     padding: .33em .66em .33em .66em;
     background-color: var(--theme-color-1);
@@ -162,8 +170,7 @@ textarea{
     color: #fff;
 }
 #submit:hover{
-    /* background-color: rgba(74, 170, 165,.85); */
-    opacity: .85;
+    opacity: .75;
 }
 #portfolio-container{
     display: flex;
@@ -177,8 +184,7 @@ textarea{
     flex-direction: row;
     flex-wrap: wrap;
     width: 100%;
-  }
-  
+  }  
   .column {
     display: flex;
     flex-direction: column;
@@ -186,17 +192,22 @@ textarea{
     flex: 1;
   }
 .portfolio-images{
-    
-    max-width: 250px;
-    /* max-height: 250px; */
-    height: auto;
+    background-color: #fff;
+    margin: 1rem auto 1rem auto;
+    height: 200px;
+    width: 250px;
     flex-wrap: wrap;
 }
 .overlay{
-    margin-top: -50px;
+    margin: -75px auto 50px auto;
     color: white;
     background-color: var(--theme-color-1);
-    max-width: 250px;
+    height: 200px;
+    width: 250px;
     height: auto;
     text-align: center;
+}
+.overlay:hover{
+    opacity: .7;
+    font-weight: bold;
 }
